I added the library DalApi

--- a/DalFacade/DalFacade.csproj
+++ b/DalFacade/DalFacade.csproj
@@ -10,4 +10,7 @@
 		<UseCommonOutputDirectory>true</UseCommonOutputDirectory>
 		<RootNamespace />
 	</PropertyGroup>
+	<ItemGroup>
+	  <Folder Include="DalApi\" />
+	</ItemGroup>
 </Project>
