--- a/DalTest/DalTest.csproj
+++ b/DalTest/DalTest.csproj
@@ -15,5 +15,6 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\DalFacade\DalFacade.csproj" />
 	  <ProjectReference Include="..\DalList\DalList.csproj" />
+	  <ProjectReference Include="..\DalXml\DalXml.csproj" />
 	</ItemGroup>
 </Project>
