We created 3 sublibrary for BL - BO, BlApi, BlImplementation. We created the logic entities, and created themain logic entities  interface of the logic layer

--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
@@ -16,6 +16,10 @@
 	  <ProjectReference Include="..\DalFacade\DalFacade.csproj" />
 	  <ProjectReference Include="..\DalList\DalList.csproj" />
 	  <ProjectReference Include="..\DalXml\DalXml.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="BlImplementation\" />
 	</ItemGroup>
 
 </Project>
