--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -15,7 +15,32 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Images\arret.png" />
+	  <None Remove="Images\bouton-pause.png" />
+	  <None Remove="Images\play-buttton.png" />
+	  <None Remove="MediaFile\Israel National Anthem %28Instrumental%29.mp3" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\BL\BL.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Images\arret.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Images\bouton-pause.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Images\play-buttton.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="MediaFile\Israel National Anthem (Instrumental).mp3">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
 	</ItemGroup>
 
 </Project>
