--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -17,6 +17,9 @@
 	<ItemGroup>
 	  <None Remove="Images\arret.png" />
 	  <None Remove="Images\bouton-pause.png" />
+	  <None Remove="Images\falgisrael.ico" />
+	  <None Remove="Images\IsraelFlag.jpg" />
+	  <None Remove="Images\LogoHaatsmautParty.png" />
 	  <None Remove="Images\play-buttton.png" />
 	  <None Remove="MediaFile\Israel National Anthem %28Instrumental%29.mp3" />
 	</ItemGroup>
@@ -32,6 +35,12 @@
 	  <Content Include="Images\bouton-pause.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
+	  <Content Include="Images\IsraelFlag.jpg">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Images\LogoHaatsmautParty.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
 	  <Content Include="Images\play-buttton.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
@@ -40,6 +49,12 @@
 	<ItemGroup>
 	  <Content Include="MediaFile\Israel National Anthem (Instrumental).mp3">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Images\falgisrael.ico">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
 	</ItemGroup>
 
