--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -16,6 +16,7 @@
 
 	<ItemGroup>
 	  <None Remove="Images\arret.png" />
+	  <None Remove="Images\Backround-blurred.jpg" />
 	  <None Remove="Images\bouton-pause.png" />
 	  <None Remove="Images\falgisrael.ico" />
 	  <None Remove="Images\IsraelFlag.jpg" />
@@ -32,6 +33,9 @@
 	<ItemGroup>
 	  <Content Include="Images\arret.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Images\Backround-blurred.jpg">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Content>
 	  <Content Include="Images\bouton-pause.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
