--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -19,6 +19,7 @@
 	  <None Remove="Images\Backround-blurred.jpg" />
 	  <None Remove="Images\bouton-pause.png" />
 	  <None Remove="Images\falgisrael.ico" />
+	  <None Remove="Images\gantt.jpg" />
 	  <None Remove="Images\IsraelFlag.jpg" />
 	  <None Remove="Images\LogoHaatsmautParty.png" />
 	  <None Remove="Images\New-Project-16.jpg" />
@@ -38,6 +39,9 @@
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Content>
 	  <Content Include="Images\bouton-pause.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Images\gantt.jpg">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
 	  <Content Include="Images\IsraelFlag.jpg">
